# apgman

./: README.md  apgman-add-rule  apgman-build  apgman-build.sh  apgman-init  apgman-run  apgman-set-path  apgman-set-path.sh  apgman-util-get-install-dir.sh  apgman.py  apiREADME.md  example.py  pyproject.toml
apgman/: __init__.py  apgman.py
