[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apgman"
version = "0.2.0"
description = "Python bindings for APGman shell scripts"
authors = [{name = "NNlk05"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"apgman.scripts" = ["*"]

[project.urls]
Home = "https://github.com/NNlk05/apgman"