[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apgman"
version = "0.2.1"
description = "Python bindings for APGman shell scripts"
authors = [{name = "NNlk05"}]
readme = "apiREADME.md"
license = "CC0-1.0"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
]

[tool.setuptools]
packages = ["apgman"]

[tool.setuptools.package-data]
apgman = ["../apgman-*"]

[project.urls]
Home = "https://github.com/NNlk05/apgman"